--- a/src/components/reception/reception.module.scss
+++ b/src/components/reception/reception.module.scss
@@ -3,7 +3,7 @@
 
 .reception {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: row-reverse;
 }
